--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Background Video & Header -->
 
     <div class="banner">
-        <video src="./files/Bgvid.mp4" type="video/mp4" autoplay muted loop></video>
+        <video src="./files/Bgvid2.mp4" type="video/mp4" autoplay muted loop></video>
     
     <!-- Header -->
 
