--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 <!-- Newsletter -->
 
-<section class="newsletter">
+<!-- <section class="newsletter">
     <div class="newstext">
         <h2>Newsletter</h2>
         <p>Subscribe to get offers and latest<br>updates every week!</p>
@@ -264,7 +264,7 @@
         </form>
     </div>
 
-</section>
+</section> -->
 
 <!-- Footer -->
 
