--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <br>
                 <br>
                 <h1>About <span>Us</span></h1>
-                <p>Firstflight Travels is a travel website project developed by Mohd. Rahil using HTML, CSS and JavaScript.</p>
+                <p>Firstflight Travels is a travel website project developed by GLA Students using HTML, CSS and JavaScript.</p>
                 <a href="#" class="connectbtn" target="_blank">Connect with me!</a>
 
                 <div class="connect-section">
