--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
         src="./files/logo.png"
         class="logo"
         alt="Logo"
-        title="FirstFlight Travels"
+        title="Web for Tours and Travels"
       />
 
       <ul class="navbar">
