--- a/locations.html
+++ b/locations.html
@@ -167,13 +167,13 @@
             <div class="footlinks">
                 <h4>Connect</h4>
                 <div class="social">
-                    <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-instagram' ></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-youtube' ></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-wordpress' ></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://www.twitter.com" target="_blank"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://www.linkedin.com" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://www.youtube.com" target="_blank"><i class='bx bxl-youtube' ></i></a>
+                    <a href="https://www.wordpress.org" target="_blank"><i class='bx bxl-wordpress' ></i></a>
+                    <a href="https://www.github.com" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
             
